Fixed flex container alignment when cards are  <=3

--- a/src/components/Bookmark/bookmarkPage.scss
+++ b/src/components/Bookmark/bookmarkPage.scss
@@ -14,7 +14,6 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0rem 1rem 0rem 0.5rem;
 
         .bookmarkTitle {
             color: $neutral-800-dark;
@@ -85,16 +84,22 @@
 
     .articles {
         display: flex;
-        // grid-template-columns: repeat(auto-fit, 330px);
         gap: 2.5em;
         max-height: 42rem;
         overflow: scroll;
-        justify-content: flex-start;
         flex-wrap: wrap;
-        // justify-content: center;
-        padding-left: 0.5rem;
-
+        justify-content: center;
+        scrollbar-color: $neutral-800 $neutral-100;
+        padding-right: 20px;
+        width: 100%;
     }
+
+    .articlesTwoCards {
+        @extend .articles;
+        justify-content: flex-start;
+    }
+
+
 
     .gridArticles {
         border-radius: 10px;
